--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "sass": "^1.55.0",
+    "sweetalert2": "^11.23.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
